<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Presentation.AddRecipe">

    <EditText
        android:id="@+id/editName"
        android:layout_width="563dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="34dp"
        android:background="@color/colorPrimaryLight"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:singleLine="true"
        android:text="recipe name..."
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/addedIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="564dp"
        android:layout_height="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorPrimaryLight"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="8"
        android:text="recipe directions..."
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="564dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryLight"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="8"
        android:text="comment..."
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addRecipeTitle"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="ENTER NEW RECIPE\nTHEN HIT BUTTON"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addToCollection"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorSecondary"
        android:onClick="submitRecipe"
        android:text="ADD RECIPE TO COLLECTION"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/addRecipeTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addedIngredients"
        android:layout_width="559dp"
        android:layout_height="34dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="no ingredients yet"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/addIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryLight"
        android:imeOptions="actionDone"
        android:maxLength="12"
        android:singleLine="true"
        android:text="amount..."
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addedTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editIngredient"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryLight"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:singleLine="true"
        android:text="ingredient..."
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addedTags"
        app:layout_constraintEnd_toStartOf="@+id/addIngredient"
        app:layout_constraintStart_toEndOf="@+id/editAmount" />

    <Button
        android:id="@+id/addIngredient"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecondary"
        android:onClick="updateIngredients"
        android:text="Add\nIngredient"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addedTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editIngredient" />

    <TextView
        android:id="@+id/addedTags"
        android:layout_width="559dp"
        android:layout_height="42dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="no tags yet"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/addTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTag"
        android:layout_width="446dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryLight"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:singleLine="true"
        android:text="tag..."
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editContent"
        app:layout_constraintEnd_toStartOf="@+id/addTag"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addTag"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorSecondary"
        android:onClick="updateTags"
        android:text="Add Tag"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editContent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>