...
                app:layout_constraintHorizontal_bias="0.595"
                app:layout_constraintStart_toEndOf="@+id/star4"
                app:layout_constraintTop_toBottomOf="@+id/Tags"
                app:layout_constraintVertical_bias="0.005" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="265dp"
                android:layout_height="28dp"
                android:layout_marginStart="155dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="172dp"
                android:layout_marginBottom="8dp"
                android:text="NOT YET RATED"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
