...
    android:background="@color/colorPrimary"
    android:visibility="visible"
    tools:context=".Presentation.MainActivity">


    <Button
        android:id="@+id/searchButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
...
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <Button
        android:id="@+id/addRecipe"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="72dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
...
