<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Presentation.SearchByName">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="469dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="421dp"
        android:layout_marginBottom="493dp"
        android:background="@color/colorPrimaryLight"
        android:textSize="30sp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="487dp"
        android:background="@color/colorSecondary"
        android:onClick="searchByName"
        android:text="SEARCH"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchText"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>